# game-badge

./: CMakeLists.txt  buildspec.json
data/: badge.html
src/: game_badge_plugin.cpp
